# rfc-index

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/rfc-cli/: Cargo.toml
crates/rfc-cli/src/: main.rs
crates/rfc-index/: Cargo.toml
crates/rfc-index/src/: body.rs  db.rs  errata.rs  error.rs  http.rs  index.rs  lib.rs  model.rs  query.rs  refs.rs  search.rs
crates/rfc-index/tests/: high_level.rs
crates/rfc-mcp/: Cargo.toml
crates/rfc-mcp/src/: main.rs
