[package]
name = "rfc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Command-line interface for rfc-index: a local cache, full-text search, and reference graph for IETF RFCs."
readme = "../../README.md"
keywords = ["rfc", "ietf", "search", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "rfc"
path = "src/main.rs"

[dependencies]
rfc-index = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
