[package]
name = "rfc-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "MCP server exposing the rfc-index library as tools over stdio."
readme = "../../README.md"
keywords = ["rfc", "ietf", "mcp"]
categories = ["command-line-utilities"]

[[bin]]
name = "rfc-mcp"
path = "src/main.rs"

[dependencies]
rfc-index = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
